apps/external/pihole/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-svc
  namespace: default
spec:
  type: ExternalName
  externalName: 10.10.99.5
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
