apps/external/pihole/IngressRoute.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ing-route
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`pihole.dcunha.io`)
    kind: Rule
    services:
    - name: pihole-svc
      port: 80
    middlewares:
    - name: default-headers
  tls:
    secretName: dcunha-io-tls
    # domains:
    # - main: pihole.dcunha.io
